--- a/Box.html
+++ b/Box.html
@@ -21,7 +21,7 @@
     </style>
   </head>
   <body>
-    <h2>Demonstrating the Box Models</h2>
+    <h2>Demonstrating the Box Model</h2>
 
     <p>
       The CSS box model is essentially a box that wraps around every HTML
